fixed type column for search and waitinglist

--- a/app/src/declaration/advancedSearch/advancedSearch.view.html
+++ b/app/src/declaration/advancedSearch/advancedSearch.view.html
@@ -284,6 +284,7 @@
                 <thead md-head md-order="query.order">
                     <tr md-row>
                         <th md-column md-numeric md-order-by="caseNumber">Sagsnummer</th>
+                        <th md-column md-order-by="bua">Type</th>
                         <th md-column md-order-by="fullName">Navn</th>
                         <th md-column md-numeric md-order-by="cprNumber">CPR</th>
                         <th md-column md-order-by="doctor">Læge</th>
@@ -297,6 +298,7 @@
                 <tbody md-body ng-repeat="case in vm.searchResults | orderBy : query.order ">
                     <tr md-row ng-click="vm.gotoCase(case.caseNumber)">
                         <td md-cell>{{case.caseNumber}}</td>
+                        <td md-cell>{{case.bua ? 'BUA' : 'PS'}}</td>
                         <td md-cell>{{case.fullName}}</td>
                         <td md-cell>{{case.cprNumber}}</td>
                         <td md-cell>{{case.doctor}}</td>
