--- a/app/src/declaration/waitinglist/waitinglist.view.html
+++ b/app/src/declaration/waitinglist/waitinglist.view.html
@@ -24,7 +24,7 @@
                 <tbody md-body ng-repeat="case in vm.waitingListCases | orderBy: vm.query.order">
                     <tr md-row class="clickable" ng-click="vm.gotoCase(case.caseNumber)">
                         <td md-cell>{{case.caseNumber}}</td>
-                        <td md-cell>{{case.bua === "true" ? 'BUA' : 'PS'}}</td>
+                        <td md-cell>{{case.bua ? 'BUA' : 'PS'}}</td>
                         <td md-cell>{{case.fullName}}</td>
                         <td md-cell>{{case.cprNumber}}</td>
                         <td md-cell>{{case.creationDateFormatted}}</td>
