giant refactor. filebrowser made into a contentList, seperated concerns

--- a/app/src/content/action/contentAction.html
+++ b/app/src/content/action/contentAction.html
@@ -4,22 +4,22 @@
     </md-button>
 
     <md-menu-content width="4">
-        <md-menu-item ng-if="content.contentType == 'cmis:document'">
-            <md-button ng-click="downloadDocument(content.nodeRef, content.name)">
+        <md-menu-item ng-if="action.download">
+            <md-button ng-click="download(content.nodeRef, content.fileName)">
                 <md-icon md-menu-align-target>get_app</md-icon>
                 {{'COMMON.DOWNLOAD' | translate }}
             </md-button>
         </md-menu-item>
 
-        <md-menu-item ng-if="content.loolEditable && vm.permissions.canEdit && content.contentType == 'cmis:document'">
+        <!-- <md-menu-item ng-if="action.edit">
             <md-button ng-click="goToLOEditPage(content.nodeRef)">
                 <md-icon md-menu-align-target>edit</md-icon>
                 {{'COMMON.EDIT' | translate }}
             </md-button>
-        </md-menu-item>
+        </md-menu-item> -->
 
-        <md-menu-item ng-if="content.canMoveAndDelete">
-            <md-button ng-click="vm.deleteContentDialog($event, content)">
+        <md-menu-item ng-if="action.delete">
+            <md-button ng-click="deleteDialog()">
                 <md-icon md-menu-align-target>remove_circle_outline</md-icon>
                 {{'COMMON.REMOVE' | translate }}
             </md-button>
