--- a/app/src/shared/directives/breadcrumb/breadcrumb.html
+++ b/app/src/shared/directives/breadcrumb/breadcrumb.html
@@ -1,11 +1,11 @@
 <ol class="od-breadcrumb">
-    <li ng-repeat="path in bcPath">
-        <a ng-hide="$last || $first" ui-sref="{{path.link}}" ui-sref-active="active">{{ path.title }}</a>
+    <li ng-repeat="crumb in crumbs" ng-click="go(crumb)">
+        <a ng-hide="$last || $first" ui-sref-active="active">{{ crumb.title }}</a>
 
-        <md-button ng-show="$first" class="md-primary md-icon-button" ui-sref="{{path.link}}" ui-sref-active="active">
+        <md-button ng-show="$first" class="md-primary md-icon-button" ui-sref-active="active">
             <md-icon>folder</md-icon>
         </md-button>
-        
-        <span ng-show="$last && !$first">{{ path.title }}</span>
+
+        <span ng-show="$last && !$first">{{ crumb.title }}</span>
     </li>
 </ol>
