--- a/app/src/system_settings/documentTemplates/documentTemplates.view.html
+++ b/app/src/system_settings/documentTemplates/documentTemplates.view.html
@@ -1,5 +1,1 @@
-<md-card>
-    <md-card-content>
-        <od-filebrowser od-breadcrumb="true" od-folders="true"></od-filebrowser>
-    </md-card-content>
-</md-card>
+<file-browser></file-browser>
