--- a/app/src/content/upload/upload.view.html
+++ b/app/src/content/upload/upload.view.html
@@ -1,4 +1,5 @@
-<md-dialog aria-label="upload-files" ng-cloak>
+<md-dialog aria-label="upload-files">
+    <form name="uploadForm" ng-submit="vm.upload()">
         <md-toolbar>
             <div class="md-toolbar-tools">
                 <h2>{{'COMMON.UPLOAD' | translate}} {{'DOCUMENT.DOCUMENTS' | translate | lowercase}}</h2>
@@ -10,20 +11,21 @@
         </md-toolbar>
 
         <md-dialog-content class="md-padding">
-                <input type="file" ngf-select ngf-multiple="true" ng-model="vm.files" required>
+            <input type="file" ngf-select ngf-multiple="true" ng-model="vm.files" required>
 
-                <ul>
-                    <li ng-repeat="f in vm.files" style="font:smaller">{{f.name}} {{f.$error}} {{f.$errorParam}}</li>
-                </ul>
+            <ul>
+                <li ng-repeat="f in vm.files" style="font:smaller">{{f.name}} {{f.$error}} {{f.$errorParam}}</li>
+            </ul>
         </md-dialog-content>
 
         <md-dialog-actions>
             <div layout="row" layout-sm="column" layout-align="space-around">
                 <md-progress-circular md-mode="indeterminate" ng-show="vm.uploading"></md-progress-circular>
             </div>
-            <md-button class="md-primary" type="submit" ng-click="vm.uploadFiles()" ng-disabled="vm.files.length == 0 || vm.uploading">
+            <md-button class="md-primary" type="submit" ng-disabled="vm.files.length === 0 || vm.uploading">
                 <md-icon>file_upload</md-icon>
                 {{'COMMON.UPLOAD' | translate}} {{'DOCUMENT.DOCUMENTS' | translate | lowercase}}
             </md-button>
         </md-dialog-actions>
+    </form>
 </md-dialog>
