--- a/app/src/header/header.view.html
+++ b/app/src/header/header.view.html
@@ -1,6 +1,6 @@
 <header class="od-header">
     <md-toolbar class="md-tall">
-        <span class="md-toolbar-tools" flex>
+        <span class="md-toolbar-tools" ng-if="vm.loggedIn" flex>
             <h2 ui-sref="declaration" style="cursor:pointer;font-variant:small-caps">
                 <strong>O</strong>bservand
                 <strong>DA</strong>tabase</h2>
