--- a/app/src/content/action/delete.view.html
+++ b/app/src/content/action/delete.view.html
@@ -4,8 +4,8 @@
         <md-toolbar>
             <div class="md-toolbar-tools">
                 <h2>{{'COMMON.REMOVE' | translate}}
-                    <span ng-show="content.contentType == 'cmis:document'">{{'DOCUMENT.DOCUMENT' | translate | lowercase}}</span>
-                    <span ng-show="content.contentType == 'cmis:folder'">{{'COMMON.FOLDER' | translate | lowercase}}</span>
+                    <span ng-show="contentList[0].contentType == 'cmis:document'">{{'DOCUMENT.DOCUMENT' | translate | lowercase}}</span>
+                    <span ng-show="contentList[0].contentType == 'cmis:folder'">{{'COMMON.FOLDER' | translate | lowercase}}</span>
                 </h2>
                 <span flex></span>
                 <md-button class="md-icon-button" ng-click="cancelDialog()">
@@ -15,8 +15,12 @@
         </md-toolbar>
 
         <md-dialog-content class="md-padding">
-            <p>{{'COMMON.SURETOREMOVE' | translate}}
-                <em>{{content.name}}</em>?</p>
+            <p>{{'COMMON.SURETOREMOVE' | translate}}</p>
+            <ul>
+                <li ng-repeat="c in vm.contentList">
+                    <em>{{c.name}}</em>
+                </li>
+            </ul>
         </md-dialog-content>
 
         <md-dialog-actions>
