--- a/app/src/header/header.view.html
+++ b/app/src/header/header.view.html
@@ -26,7 +26,7 @@
             </div>
         </span>
         <span class="md-toolbar-tools" layout="row">
-            <h2>{{vm.title}}</h2>
+            <a ui-sref="declaration.show({caseid: vm.caseId})" style="color:white"><h2>{{vm.title}}</h2></a>
             <span flex></span>
             <h2 ng-if="vm.isClosed">
                 <md-icon>done</md-icon> {{'DECLARATION.DECLARATION_CLOSED' | translate}}
