--- a/app/src/header/header.view.html
+++ b/app/src/header/header.view.html
@@ -26,15 +26,21 @@
             </div>
         </span>
         <span class="md-toolbar-tools" layout="row">
-            <a ui-sref="declaration.show({caseid: vm.caseId})" style="color:white"><h2>{{vm.title}}</h2></a>
+            <a ui-sref="declaration.show({caseid: vm.caseId})" style="color:white">
+                <h2>{{vm.title}}</h2>
+            </a>
             <span flex></span>
             <h2 ng-if="vm.isClosed">
                 <md-icon>done</md-icon> {{'DECLARATION.DECLARATION_CLOSED' | translate}}
             </h2>
             <md-button ng-repeat="action in vm.actions" ng-click="action.action()" ng-class="action.primary ? 'md-raised md-primary md-hue-2' : ''"
-                ng-disabled="action.icon === 'save' ? $root.declarationForm.$invalid : ''">
+                ng-disabled="(action.icon === 'save' ? $root.declarationForm.$invalid : '') || action.settings.disabled">
                 <md-icon>{{action.icon}}</md-icon>
                 <span>{{action.label | translate}}</span>
+                <md-tooltip class="tt-multiline" ng-if="action.settings.tooltip">
+                    Følgende felter mangler at blive udfyldt:<br>
+                    <span ng-repeat="missing in action.settings.tooltip">{{'DECLARATION.'+missing | translate}}<br></span>
+                </md-tooltip>
             </md-button>
         </span>
     </md-toolbar>
