Added single column view on small screens for advanced search

--- a/app/src/declaration/advancedSearch/advancedSearch.view.html
+++ b/app/src/declaration/advancedSearch/advancedSearch.view.html
@@ -2,7 +2,7 @@
         <div layout="column" flex="75" style="margin-top: 50px;">
             <h1 class="md-title">Vis alle sager med:</h1>
     
-            <div layout="row">
+            <div layout="column" layout-md="row">
                 <div flex>
                     <md-card flex>
                         <md-card-content>
